kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: default
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: hnnynh/paperple-spring:v0.0.42
          resources:
            requests:
              cpu: "2m"
              memory: "250Mi"
            limits:
              cpu: "100m"
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend
  name: backend-svc
  namespace: default
spec:
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 8080
    - protocol: TCP
      name: https
      port: 443
      targetPort: 8080
  selector:
    app: backend
  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-ai
  namespace: default
  labels:
    app: fastapi-ai
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fastapi-ai
  template:
    metadata:
      labels:
        app: fastapi-ai
    spec:
      containers:
        - name: fastapi-ai
          image: hnnynh/paperple-ai:v0.0.11
          resources:
            requests:
              cpu: "2m"
              memory: "50Mi"
            limits:
              cpu: "100m"
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fastapi-ai
  name: fastapi-ai-svc
  namespace: default
spec:
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app: fastapi-ai
  type: ClusterIP
