kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # cert-manager.io/issuer: "letsencrypt-staging"
    cert-manager.io/cluster-issuer: letsencrypt-nginx
    acme.cert-manager.io/http01-edit-in-place: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
  name: backend-ingress
  namespace: default
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - paperple.n-e.kr
      secretName: tls-secret
  rules:
    - host: paperple.n-e.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-svc
                port:
                  number: 80
